--- a/Inicio administrativos/dashboardAdmin.css
+++ b/Inicio administrativos/dashboardAdmin.css
@@ -268,3 +268,74 @@ h1 {
 .hidden {
   display: none;
 }
+
+/* Estilos para checkboxes personalizados */
+.checkbox-item {
+  margin: 0.5rem 0;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-left: 2rem;
+  cursor: pointer;
+  font-size: 0.9rem;
+  user-select: none;
+}
+
+.checkbox-label.disabled {
+  cursor: not-allowed;
+  color: #95a5a6;
+}
+
+.paac-checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1.2rem;
+  width: 1.2rem;
+  background-color: #eee;
+  border-radius: 4px;
+  transition: all 0.2s;
+}
+
+.checkbox-label:hover .paac-checkbox:not(:disabled) ~ .checkmark {
+  background-color: #ddd;
+}
+
+.checkbox-label .paac-checkbox:checked ~ .checkmark {
+  background-color: #27ae60;
+}
+
+.checkbox-label.disabled .paac-checkbox ~ .checkmark {
+  background-color: #ddd;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkbox-label .paac-checkbox:checked ~ .checkmark:after {
+  display: block;
+}
+
+.checkbox-label .checkmark:after {
+  left: 0.45rem;
+  top: 0.25rem;
+  width: 0.3rem;
+  height: 0.6rem;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
